k8s/textstats.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      volumes:
        - name: postgres-pv-storage
          persistentVolumeClaim:
            claimName: postgres-pvc
      containers:
        - name: postgres
          image: postgres
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-pv-storage
              mountPath: "/var/lib/postgresql/data"
              readOnly: false
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq
          ports:
            - containerPort: 5672
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-service
spec:
  selector:
    app: rabbitmq
  ports:
    - protocol: TCP
      port: 5672
      targetPort: 5672
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-worker-deployment
  labels:
    app: celery-worker
spec:
  replicas: 3
  selector:
    matchLabels:
      app: celery-worker
  template:
    metadata:
      labels:
        app: celery-worker
    spec:
      volumes:
        - name: code-pv-storage
          persistentVolumeClaim:
            claimName: code-pvc
      containers:
        - name: celery-worker
          image: textstats
          imagePullPolicy: IfNotPresent
          command: ["celery", "-A", "textstats", "worker", "-l", "info"]
          volumeMounts:
            - name: code-pv-storage
              mountPath: "/code"
              readOnly: false
---
apiVersion: v1
kind: Service
metadata:
  name: celery-worker-service
spec:
  selector:
    app: celery-worker
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: textstats-deployment
  labels:
    app: textstats
spec:
  replicas: 2
  selector:
    matchLabels:
      app: textstats
  template:
    metadata:
      labels:
        app: textstats
    spec:
      volumes:
        - name: code-pv-storage
          persistentVolumeClaim:
            claimName: code-pvc
      containers:
      - name: textstats
        image: textstats
        imagePullPolicy: IfNotPresent
        command: ["python", "manage.py", "runserver", "0.0.0.0:8000"]
        ports:
          - containerPort: 8000
        volumeMounts:
          - name: code-pv-storage
            mountPath: "/code"
            readOnly: false
---
apiVersion: v1
kind: Service
metadata:
  name: textstats-service
spec:
  selector:
    app: textstats
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: textstats-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "500m"
spec:
  tls:
  - hosts:
    - textstats.local
    secretName: textstats-tls
  rules:
  - host:
    http:
      paths:
      - path:
        backend:
          serviceName: textstats-service
          servicePort: 8000
